cabal-version: >= 1.18
build-type:    Simple
name:          build
version:       0.1

executable schemeBuild
    default-language: Haskell2010
    main-is: Build.hs
    ghc-options: -main-is Build.main -threaded "-with-rtsopts=-I0 -qg"
    build-depends:
        base >= 4.10 && < 5,
        shake >= 0.19,
        filepattern,
        filepath,          
        extra,
        rattle,
        directory,
        unix,
        cmdargs,
        hashable >= 1.3,
        unliftio >= 0.2.2,
        parsec >= 3.1.14
        
    other-modules:
        Unix,
        Config,
        ConfigArgs,
        Configure,
        Mach,
        Install,
        S.Base,
        C.Base,
        C.Config,
        C.Unix,
        S.Unix,
        S.Config,
        S.Cross                   